Tue Jul 10 18:03:36 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in libxslt/xsltwin32config.h: releaseing 1.0.0
	* win32/libxslt/libxslt.def: added another entry point
	* libxslt/transform.c: fixed a comment block
	* doc/xslt.html doc/html/*: updated and regenerated the docs

Tue Jul 10 17:25:59 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* win32/libxslt/libxslt.def: added missing functions

Tue Jul 10 16:48:43 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES libxslt/xsltproc.c libxslt/transform.c
	  libxslt/xsltInternals.h: added Embedding Stylesheets
	* tests/REC/Makefile.am tests/REC/stand-2.7-1.*: added the test
	  from the REC about it
	* libxslt/transform.c libxslt/extra.[ch] libxslt/preproc.c:
	  tried to accomodate the various (and changing) proprietary
	  ways of implementing chunking.
	* tests/docbook/result/xtchunk/html: now output is generated in
	  ISO-8859-1

Mon Jul  9 23:23:50 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c: small cleanup
	* libxslt/transform.c libxslt/xslt.c : patch from Michal Sajdak
	  for cdata/text handling

Mon Jul  9 22:02:40 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltutils.c: small fix for xsl:message by Stephane GUIBOU
	* tests/documents/Makefile.am tests/documents/message.*: added
	  a specific regression test
	* libxslt/transform.c: fixed an infinite loop
	* configure.in doc/Makefile.am: attempt to add --with-html-dir,
	  this may work

Mon Jul  9 15:55:14 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c libxslt/xslt.c libxslt/xsltInternals.h:
	  fixed exclude-result-prefixes handling and how namespaces
	  propagate from the stylesheet to the result in general, this
	  is a serious cleanup.
	* tests/general/bug-3[67]-inc.xsl tests/general/bug-6-.xsl
	  tests/general/itemschoose.out tests/namespaces/extra.xsl
	  tests/REC/test-10-1.xsl tests/REC/test-10-2.xsl